<resources>
    <string name="app_name">圣阳移动</string>

    <string name="position_one">正1</string>
    <string name="negative_one">负1</string>
    <string name="position_two">正2</string>
    <string name="negative_two">负2</string>
    <string name="temperature">温度:</string>
    <string name="humidity">湿度:</string>
    <string name="actual">实际:</string>


    <string name="login_button">登陆</string>
    <string name="login_hint">忘记密码?请联系管理员</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="work_center_code">工位编号</string>
    <string name="sure">确定</string>
    <string name="validate_empty">不能为空</string>
    <string name="validate_only_numchar">只能为字母数字,不能为其他字符</string>
    <string name="login_fail">登陆失败</string>

    <string name="BASE_URL">http://192.168.0.9:8081/</string>
    <string name="POSITION">position</string>
    <string name="FIRST_LAUNCH">first_launch</string>
    <string name="IS_LOGIN">is_login</string>
    <string name="USER_SESSION">user_session</string>
    <string name="WORK_CENTER_CODE_SESSION">work_center_code_session</string>
    <string name="work_shop_code_positive">01</string>
    <string name="work_shop_code_negative">02</string>

</resources>
