<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vstar.sacredsun_android_phone.ui.activity.MainActivity"
    android:background="@color/custom_bg_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/area_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.15">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/custom_txt_color"
                    android:background="@drawable/border_small"
                    android:textSize="10sp"
                    android:padding="4dp"
                    android:text="@string/negative_one"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.85">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/negative_one_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical">
                </android.support.v7.widget.RecyclerView>
            </RelativeLayout>
        </LinearLayout>
        <View
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:background="@color/dividor_color"></View>
        <LinearLayout
            android:id="@+id/area_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.15">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/custom_txt_color"
                    android:background="@drawable/border_small"
                    android:textSize="10sp"
                    android:padding="4dp"
                    android:text="@string/position_one"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.85">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/position_one_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical">
                </android.support.v7.widget.RecyclerView>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/dividor_color">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/area_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.15">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/custom_txt_color"
                    android:background="@drawable/border_small"
                    android:padding="4dp"
                    android:textSize="10sp"
                    android:text="@string/negative_two"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.85">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/negative_two_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical">
                </android.support.v7.widget.RecyclerView>
            </RelativeLayout>
        </LinearLayout>
        <View
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:background="@color/dividor_color"></View>
        <LinearLayout
            android:id="@+id/area_four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.15">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/custom_txt_color"
                    android:background="@drawable/border_small"
                    android:textSize="10sp"
                    android:padding="4dp"
                    android:text="@string/position_two"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.85">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/position_two_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical">
                </android.support.v7.widget.RecyclerView>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
